🛠️ Refactor: Optimize Redux State Layer & Switch to Asynchronous Database Access

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -192,6 +192,10 @@
   margin-top: 1rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .inline-block {
   display: inline-block;
 }
@@ -234,6 +238,10 @@
 
 .w-full {
   width: 100%;
+}
+
+.w-40 {
+  width: 10rem;
 }
 
 .flex-1 {
