🛠️ Refactor: Redux state layer, database operations and some Components
1. Integrate UserMessage and ChatGPTMessage into MessageItem component, which can now be collapsed and expanded to hide/show content.
2. Rewrite Redux state layer and use Redux-thunk.
3. Fix database operations to be asynchronous.

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -92,6 +92,10 @@
   --tw-backdrop-sepia:  ;
 }
 
+.collapse {
+  visibility: collapse;
+}
+
 .relative {
   position: relative;
 }
@@ -250,6 +254,10 @@
 
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
