--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -100,10 +100,6 @@
   visibility: collapse;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .relative {
   position: relative;
 }
@@ -396,23 +392,32 @@
   border-top-width: 1px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-solid {
   border-style: solid;
+}
+
+.border-dark-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(44 46 51 / var(--tw-border-opacity));
+}
+
+.border-dark-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(37 38 43 / var(--tw-border-opacity));
+}
+
+.border-dark-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(20 21 23 / var(--tw-border-opacity));
 }
 
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-
-.border-orange-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(249 115 22 / var(--tw-border-opacity));
-}
-
-.border-violet-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(139 92 246 / var(--tw-border-opacity));
 }
 
 .border-violet-600 {
@@ -423,6 +428,31 @@
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-dark-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 58 64 / var(--tw-bg-opacity));
+}
+
+.bg-dark-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(44 46 51 / var(--tw-bg-opacity));
+}
+
+.bg-dark-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 38 43 / var(--tw-bg-opacity));
+}
+
+.bg-dark-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(26 27 30 / var(--tw-bg-opacity));
+}
+
+.bg-dark-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 21 23 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100 {
@@ -472,16 +502,6 @@
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-violet-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 243 255 / var(--tw-bg-opacity));
-}
-
-.bg-violet-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(167 139 250 / var(--tw-bg-opacity));
 }
 
 .p-1 {
@@ -557,7 +577,11 @@
 }
 
 .font-greycliff {
-  font-family: Greycliff CF, sans-serif;
+  font-family: Greycliff CF, -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+}
+
+.font-monaco {
+  font-family: Monaco, -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
 }
 
 .text-lg {
@@ -595,9 +619,29 @@
   letter-spacing: 0.025em;
 }
 
-.text-blue-500 {
+.text-black {
   --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-dark-100 {
+  --tw-text-opacity: 1;
+  color: rgb(193 194 197 / var(--tw-text-opacity));
+}
+
+.text-dark-200 {
+  --tw-text-opacity: 1;
+  color: rgb(166 167 171 / var(--tw-text-opacity));
+}
+
+.text-dark-300 {
+  --tw-text-opacity: 1;
+  color: rgb(144 146 150 / var(--tw-text-opacity));
+}
+
+.text-dark-400 {
+  --tw-text-opacity: 1;
+  color: rgb(92 95 102 / var(--tw-text-opacity));
 }
 
 .text-gray-300 {
@@ -615,6 +659,11 @@
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
@@ -630,14 +679,14 @@
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
+.text-red-400 {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.text-violet-400 {
-  --tw-text-opacity: 1;
-  color: rgb(167 139 250 / var(--tw-text-opacity));
 }
 
 .text-violet-500 {
@@ -664,34 +713,8 @@
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-red-200 {
   --tw-shadow-color: #fecaca;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-violet-500 {
-  --tw-shadow-color: #8b5cf6;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-violet-200 {
-  --tw-shadow-color: #ddd6fe;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-violet-100 {
-  --tw-shadow-color: #ede9fe;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-violet-50 {
-  --tw-shadow-color: #f5f3ff;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -699,12 +722,12 @@
   outline-style: solid;
 }
 
-.outline-2 {
-  outline-width: 2px;
-}
-
 .outline-1 {
   outline-width: 1px;
+}
+
+.outline-2 {
+  outline-width: 2px;
 }
 
 .outline-red-400 {
@@ -794,6 +817,16 @@
 }
 
 @font-face {
+  font-family: "Monaco";
+
+  /* 字体家族名称 */
+
+  src: url("./fonts/Monaco.woff") format("woff");
+
+  /* 字体文件路径及格式 */
+}
+
+@font-face {
   font-family: "Greycliff CF";
 
   /* 字体家族名称 */
@@ -857,9 +890,9 @@ element-selector::-webkit-scrollbar {
   cursor: pointer;
 }
 
-.hover\:bg-violet-50:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 243 255 / var(--tw-bg-opacity));
+.hover\:text-dark-100:hover {
+  --tw-text-opacity: 1;
+  color: rgb(193 194 197 / var(--tw-text-opacity));
 }
 
 .hover\:text-gray-700:hover {
