--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ element-selector::-webkit-scrollbar {
 }
 
 /* 滚动条 */
-.chat-messages-view::-webkit-scrollbar {
+.scrollbar-custom::-webkit-scrollbar {
   display: block;
   width: 6px;
   height: 6px;
@@ -55,12 +55,31 @@ element-selector::-webkit-scrollbar {
 }
 
 /* 滚动条滑块 */
-.chat-messages-view::-webkit-scrollbar-thumb {
+.scrollbar-custom::-webkit-scrollbar-thumb {
   background-color: #aaa;
   border-radius: 3px;
 }
 
 /* 鼠标悬停在滚动条上的滑块 */
-.chat-messages-view::-webkit-scrollbar-thumb:hover {
+.scrollbar-custom::-webkit-scrollbar-thumb:hover {
   background-color: #666;
+}
+
+/* 滚动条 */
+.scrollbar-custom-dark::-webkit-scrollbar {
+  display: block;
+  width: 6px;
+  height: 6px;
+  background-color: #141517;
+}
+
+/* 滚动条滑块 */
+.scrollbar-custom-dark::-webkit-scrollbar-thumb {
+  background-color: #25262b;
+  border-radius: 3px;
+}
+
+/* 鼠标悬停在滚动条上的滑块 */
+.scrollbar-custom-dark::-webkit-scrollbar-thumb:hover {
+  background-color: #2c2e33;
 }
