--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -231,6 +231,14 @@
   height: 100%;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
+.h-7 {
+  height: 1.75rem;
+}
+
 .max-h-0 {
   max-height: 0px;
 }
@@ -308,12 +316,24 @@
   gap: 0.25rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
 .overflow-auto {
   overflow: auto;
 }
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-visible {
+  overflow: visible;
 }
 
 .overflow-scroll {
@@ -380,6 +400,10 @@
   border-width: 0px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-l {
   border-left-width: 1px;
 }
@@ -392,10 +416,6 @@
   border-top-width: 1px;
 }
 
-.border-b {
-  border-bottom-width: 1px;
-}
-
 .border-solid {
   border-style: solid;
 }
@@ -405,9 +425,14 @@
   border-color: rgb(44 46 51 / var(--tw-border-opacity));
 }
 
-.border-dark-700 {
+.border-dark-750 {
   --tw-border-opacity: 1;
-  border-color: rgb(37 38 43 / var(--tw-border-opacity));
+  border-color: rgb(29 30 33 / var(--tw-border-opacity));
+}
+
+.border-dark-800 {
+  --tw-border-opacity: 1;
+  border-color: rgb(26 27 30 / var(--tw-border-opacity));
 }
 
 .border-dark-900 {
@@ -443,6 +468,11 @@
 .bg-dark-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(37 38 43 / var(--tw-bg-opacity));
+}
+
+.bg-dark-750 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 30 33 / var(--tw-bg-opacity));
 }
 
 .bg-dark-800 {
@@ -866,7 +896,7 @@ element-selector::-webkit-scrollbar {
 
 /* 滚动条 */
 
-.chat-messages-view::-webkit-scrollbar {
+.scrollbar-custom::-webkit-scrollbar {
   display: block;
   width: 6px;
   height: 6px;
@@ -875,15 +905,37 @@ element-selector::-webkit-scrollbar {
 
 /* 滚动条滑块 */
 
-.chat-messages-view::-webkit-scrollbar-thumb {
+.scrollbar-custom::-webkit-scrollbar-thumb {
   background-color: #aaa;
   border-radius: 3px;
 }
 
 /* 鼠标悬停在滚动条上的滑块 */
 
-.chat-messages-view::-webkit-scrollbar-thumb:hover {
+.scrollbar-custom::-webkit-scrollbar-thumb:hover {
   background-color: #666;
+}
+
+/* 滚动条 */
+
+.scrollbar-custom-dark::-webkit-scrollbar {
+  display: block;
+  width: 6px;
+  height: 6px;
+  background-color: #141517;
+}
+
+/* 滚动条滑块 */
+
+.scrollbar-custom-dark::-webkit-scrollbar-thumb {
+  background-color: #25262b;
+  border-radius: 3px;
+}
+
+/* 鼠标悬停在滚动条上的滑块 */
+
+.scrollbar-custom-dark::-webkit-scrollbar-thumb:hover {
+  background-color: #2c2e33;
 }
 
 .hover\:cursor-pointer:hover {
