--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -906,6 +906,11 @@
   color: rgb(167 139 250 / var(--tw-text-opacity));
 }
 
+.text-dark-500 {
+  --tw-text-opacity: 1;
+  color: rgb(55 58 64 / var(--tw-text-opacity));
+}
+
 .opacity-0 {
   opacity: 0;
 }
