--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -596,6 +596,16 @@
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-dark-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(193 194 197 / var(--tw-bg-opacity));
+}
+
+.bg-violet-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 243 255 / var(--tw-bg-opacity));
+}
+
 .p-1 {
   padding: 0.25rem;
 }
@@ -666,6 +676,10 @@
 
 .pt-2 {
   padding-top: 0.5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .text-center {
