--- a/src/webview/tailwind.css
+++ b/src/webview/tailwind.css
@@ -248,6 +248,10 @@
   height: 3rem;
 }
 
+.h-3 {
+  height: 0.75rem;
+}
+
 .h-4 {
   height: 1rem;
 }
@@ -282,6 +286,10 @@
 
 .max-h-64 {
   max-height: 16rem;
+}
+
+.w-3 {
+  width: 0.75rem;
 }
 
 .w-36 {
@@ -791,6 +799,11 @@
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-violet-200 {
+  --tw-text-opacity: 1;
+  color: rgb(221 214 254 / var(--tw-text-opacity));
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -828,6 +841,16 @@
 
 .shadow-red-200 {
   --tw-shadow-color: #fecaca;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-violet-300 {
+  --tw-shadow-color: #c4b5fd;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-violet-700 {
+  --tw-shadow-color: #6d28d9;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
