Style: Optimizing the user interface.

--- a/src/webview/tailwind.css
+++ b/src/webview/tailwind.css
@@ -168,6 +168,11 @@
   margin-bottom: 0.5rem;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -248,10 +253,6 @@
   height: 3rem;
 }
 
-.h-3 {
-  height: 0.75rem;
-}
-
 .h-4 {
   height: 1rem;
 }
@@ -288,10 +289,6 @@
   max-height: 16rem;
 }
 
-.w-3 {
-  width: 0.75rem;
-}
-
 .w-36 {
   width: 9rem;
 }
@@ -308,8 +305,16 @@
   width: 11rem;
 }
 
+.w-8 {
+  width: 2rem;
+}
+
 .w-full {
   width: 100%;
+}
+
+.w-7 {
+  width: 1.75rem;
 }
 
 .flex-1 {
@@ -458,6 +463,10 @@
   border-radius: 0.75rem;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -514,6 +523,11 @@
 .border-violet-600 {
   --tw-border-opacity: 1;
   border-color: rgb(124 58 237 / var(--tw-border-opacity));
+}
+
+.border-violet-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(139 92 246 / var(--tw-border-opacity));
 }
 
 .bg-blue-500 {
@@ -672,6 +686,18 @@
   padding-top: 0.5rem;
 }
 
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
+.pl-1 {
+  padding-left: 0.25rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -789,6 +815,11 @@
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
+.text-violet-200 {
+  --tw-text-opacity: 1;
+  color: rgb(221 214 254 / var(--tw-text-opacity));
+}
+
 .text-violet-500 {
   --tw-text-opacity: 1;
   color: rgb(139 92 246 / var(--tw-text-opacity));
@@ -799,9 +830,9 @@
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-violet-200 {
+.text-gray-200 {
   --tw-text-opacity: 1;
-  color: rgb(221 214 254 / var(--tw-text-opacity));
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -824,33 +855,8 @@
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-dark-300 {
-  --tw-shadow-color: #909296;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-dark-700 {
-  --tw-shadow-color: #25262B;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-gray-300 {
-  --tw-shadow-color: #d1d5db;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
 .shadow-red-200 {
   --tw-shadow-color: #fecaca;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-violet-300 {
-  --tw-shadow-color: #c4b5fd;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-violet-700 {
-  --tw-shadow-color: #6d28d9;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -1076,6 +1082,16 @@ element-selector::-webkit-scrollbar {
 
 .hover\:cursor-pointer:hover {
   cursor: pointer;
+}
+
+.hover\:bg-violet-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(196 181 253 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-violet-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(167 139 250 / var(--tw-bg-opacity));
 }
 
 .hover\:text-dark-100:hover {
