--- a/src/webview/tailwind.css
+++ b/src/webview/tailwind.css
@@ -148,6 +148,11 @@
   z-index: 50;
 }
 
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
@@ -166,11 +171,6 @@
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-}
-
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
 }
 
 .mb-1 {
@@ -285,10 +285,6 @@
   max-height: 1.5rem;
 }
 
-.max-h-64 {
-  max-height: 16rem;
-}
-
 .max-h-80 {
   max-height: 20rem;
 }
@@ -309,16 +305,12 @@
   width: 11rem;
 }
 
-.w-8 {
-  width: 2rem;
+.w-7 {
+  width: 1.75rem;
 }
 
 .w-full {
   width: 100%;
-}
-
-.w-7 {
-  width: 1.75rem;
 }
 
 .flex-1 {
@@ -467,10 +459,6 @@
   border-radius: 0.75rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .border {
   border-width: 1px;
 }
@@ -529,9 +517,19 @@
   border-color: rgb(124 58 237 / var(--tw-border-opacity));
 }
 
-.border-violet-500 {
+.border-dark-700 {
   --tw-border-opacity: 1;
-  border-color: rgb(139 92 246 / var(--tw-border-opacity));
+  border-color: rgb(37 38 43 / var(--tw-border-opacity));
+}
+
+.border-dark-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(55 58 64 / var(--tw-border-opacity));
+}
+
+.border-dark-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(92 95 102 / var(--tw-border-opacity));
 }
 
 .bg-blue-500 {
@@ -613,14 +611,14 @@
   background-color: rgb(139 92 246 / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-violet-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(124 58 237 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .p-1 {
@@ -675,6 +673,10 @@
   padding-bottom: 0.75rem;
 }
 
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
@@ -687,6 +689,10 @@
   padding-left: 0.5rem;
 }
 
+.pl-3 {
+  padding-left: 0.75rem;
+}
+
 .pr-1 {
   padding-right: 0.25rem;
 }
@@ -695,20 +701,16 @@
   padding-top: 0.5rem;
 }
 
-.pb-1 {
-  padding-bottom: 0.25rem;
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
 .pl-1 {
   padding-left: 0.25rem;
 }
 
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pl-3 {
-  padding-left: 0.75rem;
+.pt-1 {
+  padding-top: 0.25rem;
 }
 
 .text-center {
@@ -841,11 +843,6 @@
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -1095,16 +1092,6 @@ element-selector::-webkit-scrollbar {
 
 .hover\:cursor-pointer:hover {
   cursor: pointer;
-}
-
-.hover\:bg-violet-300:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(196 181 253 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-violet-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(167 139 250 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-violet-500:hover {
