fix: 修复自定义标题栏后窗口不可移动的问题

--- a/src/webview/tailwind.css
+++ b/src/webview/tailwind.css
@@ -92,6 +92,10 @@
   --tw-backdrop-sepia:  ;
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .visible {
   visibility: visible;
 }
@@ -345,6 +349,12 @@
 
 .animate-bounce {
   animation: bounce 1s infinite;
+}
+
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .resize {
@@ -735,10 +745,6 @@
 
 .font-semibold {
   font-weight: 600;
-}
-
-.font-extrabold {
-  font-weight: 800;
 }
 
 .italic {
